
	--------------------  HepMC-01-27-02  ---------------------------------

2006-06-19 Lynn Garren

	* fix test for Windows
	* add ReadMe.cygwin-VC71 and setup.cygwin-VC71


2006-06-14 Lynn Garren

	* GenEvent.cc, GenParticle.cc,  GenVertex.cc use standard C++ output
	* testPrintBug new test for output problems with gcc 4.x
	* HepMC/HepMC_CLHEP20.h defines several typedefs needed when compiling 
	   with CLHEP 2.0.x
	* HEPEVT_Wrapper.h, HerwigWrapper6_4.h, PythiaWrapper6_2.h
	   need extern "C" statements for gcc 4.x
	* HepMC_CLHEP20.h, Polarization.h, GenVertex.h, GenParticle.h
	   HepMC will work with both CLHEP 1.9.x and 2.0.x


	--------------------  HepMC-01-27-01  ---------------------------------

2006-03-31 Lynn Garren

	* GenEvent.h, GenEvent.cc make sure m_heavy_ion is initialized to 0


2006-03-29 Lynn Garren

	* HepMC/ParticleData.h remove dependency on CLHEP/Units by HepMC_hbarc
	* HepMC/Polarization.h remove dependency on CLHEP/Units by HepMC_pi

	--------------------  HepMC-01-27-00  ---------------------------------

2006-03-07 Lynn Garren

	* add simple check in the test subdirectory

2006-02-17 Lynn Garren

	* HepMC/HeavyIon.h names have been changed to match both HepMC and
	wishes of heavy ion users

2006-01-12 Lynn Garren

	HepPDT 1.26 is available at https://savannah.cern.ch/projects/hepmc/
	
	* HepMC/HeavyIon.h implements information requested by CMS
	* HepMC/GenParticle.h has pointer (null by default) to HeavyIon
	* code providing interfaces to Fortran common blocks has been moved
	out of libHepMC and into libHepMCfio

	--------------------  HepMC-01-02-26  ---------------------------------

	--------------------  HepMC-01-02-21  ---------------------------------

2005-04-27 Matt Dobbs and Giorgos
	* src/IO_HERWIG.cxx implemented a bug fix suggested by borut, 
	which keeps the remapping of daughters/motherrs from going "over
	the end" on herwig events (was noticed in the tauola events for 
	rome DC).
