@@ -18,11 +18,11 @@ namespace HepMC {
 				    GenVertex* signal_vertex,
 				    const WeightContainer& weights,
 				    const std::vector<long int>& 
-				    random_states, HeavyIon* ion ) :
+				    random_states, HeavyIon* ion, PdfInfo* pdf ) :
 	m_signal_process_id(signal_process_id), m_event_number(event_number),
 	m_event_scale(-1), m_alphaQCD(-1), m_alphaQED(-1),
 	m_signal_process_vertex(signal_vertex), m_weights(weights),
-	m_random_states(random_states), m_heavy_ion(ion)
+	m_random_states(random_states), m_heavy_ion(ion), m_pdf_info(pdf)
     {
 	// note: default values for m_event_scale, m_alphaQCD, m_alphaQED
 	//       are as suggested in hep-ph/0109068, "Generic Interface..."
